feat: 상품 할인가 필드 추가